hphp/hack/test/typecheck/deprecated_attr_bad.php.exp
File "deprecated_attr_bad.php", line 3, characters 16-18:
Attribute arguments must be literals (Parsing[1002])
File "deprecated_attr_bad.php", line 3, characters 16-18:
Unbound name: `FOO` (a global constant) (Naming[2049])
File "deprecated_attr_bad.php", line 3, characters 16-18:
Unbound global constant (Typing) (Typing[4106])
File "deprecated_attr_bad.php", line 3, characters 16-18:
This attribute parameter should be static string literal (Typing[4127])
